force-app/main/default/objects/Invoice__c/fields/CanceledInvoiceId__c.field-meta.xml
<CustomField>
    <fullName>CanceledInvoiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to Invoice which is cancelled by current Invoice</description>
    <inlineHelpText>Relation to Invoice which is cancelled by current Invoice</inlineHelpText>
    <label>Canceled Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Cancel Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>