force-app/main/default/objects/Invoice__c/fields/CanceledInvoiceSAPId__c.field-meta.xml
<CustomField>
    <fullName>CanceledInvoiceSAPId__c</fullName>
    <description>SAP ID of Invoice which is cancelled by current Invoice</description>
    <inlineHelpText>SAP ID of Invoice which is cancelled by current Invoice</inlineHelpText>
    <label>Canceled Invoice SAP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>