force-app/main/default/objects/Invoice__c/fields/IsCanceled__c.field-meta.xml
<CustomField>
    <fullName>IsCanceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canceled</label>
    <type>Checkbox</type>
</CustomField>