force-app/main/default/objects/Invoice__c/fields/IsProforma__c.field-meta.xml
<CustomField>
    <fullName>IsProforma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proforma</label>
    <type>Checkbox</type>
</CustomField>