force-app/main/default/objects/Invoice__c/fields/IssuedDate__c.field-meta.xml
<CustomField>
    <fullName>IssuedDate__c</fullName>
    <label>Issued Date</label>
    <type>Date</type>
</CustomField>