force-app/main/default/objects/Invoice__c/fields/TaxDate__c.field-meta.xml
<CustomField>
    <fullName>TaxDate__c</fullName>
    <label>Tax Date</label>
    <type>Date</type>
</CustomField>