force-app/main/default/objects/Invoice__c/fields/TotalWithVAT__c.field-meta.xml
<CustomField>
    <fullName>TotalWithVAT__c</fullName>
    <label>Total with VAT</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>