force-app/main/default/objects/Invoice__c/listViews/All_Invoices_II.listView-meta.xml
<ListView>
    <fullName>All_Invoices_II</fullName>
    <columns>SAPId__c</columns>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OpportunityId__c</columns>
    <columns>IsPaid__c</columns>
    <columns>PaidDate__c</columns>
    <columns>IsProforma__c</columns>
    <columns>TotalWithVAT__c</columns>
    <columns>OrderId__c</columns>
    <columns>IssuedDate__c</columns>
    <columns>DueDate__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>IsCanceled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountId__c</field>
        <operation>notEqual</operation>
        <value>VERTI s.r.o.</value>
    </filters>
    <filters>
        <field>AccountId__c</field>
        <operation>notEqual</operation>
        <value>CONTREA s.r.o.</value>
    </filters>
    <filters>
        <field>AccountId__c</field>
        <operation>notEqual</operation>
        <value>Martina Jelenová</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>Jiří Kácl</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>Jaroslav Král</value>
    </filters>
    <filters>
        <field>IsCanceled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Invoices</label>
</ListView>